Resolves: tdf#107812 add check for -Oblique

and move checks for -BoldOblique and -LightOblique before -Bold and -Light

Change-Id: I59b59a10c6e92c6a6dc269aad616b9eb9e185ccd